# c-lox

./: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  test.lox  value.c  value.h  vm.c  vm.h
lox-scripts/: gc.lox
